--- a/styles.css
+++ b/styles.css
@@ -6,14 +6,14 @@ h1 {
 }
 
 body{
-    background:beige;
+    background:rgb(248, 208, 238);
     border:5px solid black;
     border-radius: 10px; 
 }
 
 ul{
     list-style-type: none;
-    background-color:gold ;
+    background-color:rgb(252, 128, 180) ;
     display:flex;
 }
 
@@ -27,5 +27,5 @@ img{display:block;
 } 
 
 p.paragraf-1 {
-    color:aquamarine;
+    color:black;
 }
