--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,18 @@ h1 {
     text-align: center;
     font-family:sans-serif;
     font-weight: normal;
-    color:darkgoldenrod;
+    color:rgb(236, 208, 138);
 }
 
 body{
-    background:rgb(248, 208, 238);
+    background:rgb(166, 83, 214);
     border:5px solid black;
     border-radius: 10px; 
 }
 
 ul{
     list-style-type: none;
-    background-color:rgb(252, 128, 180) ;
+    background-color:rgb(108, 120, 224) ;
     display:flex;
 }
 
